--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -78,12 +78,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="画面遷移\AB遷移\GO.cs" />
-    <Compile Include="画面遷移\AB遷移\シャッター.cs" />
+    <Compile Include="ステージ\アイキャッチ\GO.cs" />
+    <Compile Include="ステージ\アイキャッチ\シャッター.cs" />
     <Compile Include="ステージ\ステージ.cs" />
     <Compile Include="ステージ\ステージ管理.cs" />
     <Compile Include="ステージ\タイトル\タイトルステージ.cs" />
-    <Compile Include="画面遷移\ABC遷移\回転幕.cs" />
+    <Compile Include="ステージ\アイキャッチ\回転幕.cs" />
     <Compile Include="ステージ\舞台画像.cs" />
     <Compile Include="ステージ\認証\認証ステージ.cs" />
     <Compile Include="ステージ\選曲\選曲ステージ.cs" />
