--- a/DTXmatixx/packages.config
+++ b/DTXmatixx/packages.config
@@ -10,4 +10,5 @@
   <package id="SharpDX.DirectInput" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
