--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{736BE388-5EC5-4BF9-838B-8580C9A8DA9C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>DTXmatixx</RootNamespace>
-    <AssemblyName>DTXmatixx</AssemblyName>
+    <AssemblyName>DTXManiaMatixx</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
