演奏位置カーソルを実装。 演奏判定パラメータのパーセンテージの表示を実装。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ステージ\演奏\左サイドクリアパネル.cs" />
     <Compile Include="ステージ\演奏\曲名パネル.cs" />
     <Compile Include="ステージ\演奏\演奏ステージ.cs" />
+    <Compile Include="ステージ\演奏\演奏位置パネル.cs" />
     <Compile Include="ステージ\演奏\演奏判定パラメータ.cs" />
     <Compile Include="ステージ\演奏\表示レーン種別.cs" />
     <Compile Include="ステージ\舞台画像.cs" />
@@ -370,6 +371,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="System\Images\パラメータ文字矩形.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="System\Images\演奏位置カーソル.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="System\Images\演奏位置カーソル矩形.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
