--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ステージ\演奏\演奏位置パネル.cs" />
     <Compile Include="ステージ\演奏\演奏判定パラメータ.cs" />
     <Compile Include="ステージ\演奏\表示レーン種別.cs" />
+    <Compile Include="ステージ\結果\結果ステージ.cs" />
     <Compile Include="ステージ\舞台画像.cs" />
     <Compile Include="ステージ\認証\認証ステージ.cs" />
     <Compile Include="ステージ\選曲\曲リスト.cs" />
