--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -117,6 +117,7 @@
     <Compile Include="ステージ\認証\認証ステージ.cs" />
     <Compile Include="ステージ\選曲\曲リスト.cs" />
     <Compile Include="ステージ\選曲\選択曲枠ランナー.cs" />
+    <Compile Include="ステージ\選曲\難易度と成績.cs" />
     <Compile Include="ステージ\選曲\青い枠.cs" />
     <Compile Include="ステージ\選曲\選曲ステージ.cs" />
     <Compile Include="入力\ドラム入力種別.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="曲\RootNode.cs" />
     <Compile Include="曲\キャプションテクスチャ.cs" />
     <Compile Include="曲\曲ツリー.cs" />
+    <Compile Include="曲\難易度種別.cs" />
     <Compile Include="設定\AutoPlay種別.cs" />
     <Compile Include="設定\オプション設定.cs" />
     <Compile Include="設定\システム設定.cs" />
