--- a/DTXmatixxTests/DTXmatixxTests.csproj
+++ b/DTXmatixxTests/DTXmatixxTests.csproj
@@ -60,7 +60,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ステージ\演奏\演奏判定パラメータTests.cs" />
+    <Compile Include="ステージ\演奏\成績Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
