スコアの算出式をGDもどきに修正。

--- a/DTXmatixxTests/DTXmatixxTests.csproj
+++ b/DTXmatixxTests/DTXmatixxTests.csproj
@@ -70,6 +70,10 @@
       <Project>{0e35c4ac-6e28-4a09-a6ce-05d177800051}</Project>
       <Name>FDK</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\%40StrokeStyleT\リポジトリ %28CsWin10Desktop3%29\SSTFormat\SSTFormat.csproj">
+      <Project>{93b53767-a0a5-431c-9ec7-b23dbffb10ec}</Project>
+      <Name>SSTFormat</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DTXmatixx\DTXmatixx.csproj">
       <Project>{736BE388-5EC5-4BF9-838B-8580C9A8DA9C}</Project>
       <Name>DTXmatixx</Name>
