--- a/DTXmatixx/packages.config
+++ b/DTXmatixx/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSCore" version="1.2.1.1" targetFramework="net452" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="SharpDX" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Animation" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net452" />
@@ -10,5 +11,9 @@
   <package id="SharpDX.DirectInput" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
