--- a/DTXmatixx/packages.config
+++ b/DTXmatixx/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSCore" version="1.2.1.1" targetFramework="net452" />
-  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.ja" version="6.1.3" targetFramework="net452" />
   <package id="SharpDX" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Animation" version="4.0.1" targetFramework="net452" />
   <package id="SharpDX.Desktop" version="4.0.1" targetFramework="net452" />
