Songテーブルに最終更新日時を追加し、ファイルと突合して、異なるようならレコードを更新するよう修正。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -158,7 +158,7 @@
     <Compile Include="設定\システム設定.cs" />
     <Compile Include="設定\ドラムとチップと入力の対応表.cs" />
     <Compile Include="曲\SongsDB.cs" />
-    <Compile Include="曲\Songs.cs" />
+    <Compile Include="曲\Song.cs" />
     <Compile Include="設定\表示レーンの左右.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
