オプション設定をユーザ設定に変更し、ユーザDBから情報を生成するように修正。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -154,11 +154,13 @@
     <Compile Include="曲\曲ツリー.cs" />
     <Compile Include="曲\難易度種別.cs" />
     <Compile Include="設定\AutoPlay種別.cs" />
-    <Compile Include="設定\オプション設定.cs" />
+    <Compile Include="設定\DB\User.cs" />
+    <Compile Include="設定\DB\UsersDB.cs" />
+    <Compile Include="設定\ユーザ設定.cs" />
     <Compile Include="設定\システム設定.cs" />
     <Compile Include="設定\ドラムとチップと入力の対応表.cs" />
-    <Compile Include="データベース\SongsDB.cs" />
-    <Compile Include="データベース\Song.cs" />
+    <Compile Include="設定\DB\SongsDB.cs" />
+    <Compile Include="設定\DB\Song.cs" />
     <Compile Include="設定\表示レーンの左右.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
