--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -154,14 +154,16 @@
     <Compile Include="曲\曲ツリー.cs" />
     <Compile Include="曲\難易度種別.cs" />
     <Compile Include="設定\AutoPlay種別.cs" />
+    <Compile Include="設定\DB\Song.cs" />
+    <Compile Include="設定\DB\SongDB.cs" />
+    <Compile Include="設定\DB\SQLiteBaseDB.cs" />
     <Compile Include="設定\DB\Record.cs" />
     <Compile Include="設定\DB\User.cs" />
-    <Compile Include="設定\DB\UsersDB.cs" />
+    <Compile Include="設定\DB\UserDB.cs" />
     <Compile Include="設定\ユーザ設定.cs" />
     <Compile Include="設定\システム設定.cs" />
     <Compile Include="設定\ドラムとチップと入力の対応表.cs" />
-    <Compile Include="設定\DB\SongsDB.cs" />
-    <Compile Include="設定\DB\Song.cs" />
+    <Compile Include="設定\曲DB.cs" />
     <Compile Include="設定\表示レーンの左右.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -467,6 +469,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
