ぶつかりやすいクラス名について、「表示」を付与。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -117,11 +117,11 @@
     <Compile Include="ステージ\曲ツリー構築\曲ツリー構築ステージ.cs" />
     <Compile Include="ステージ\曲読み込み\曲読み込みステージ.cs" />
     <Compile Include="ステージ\演奏\カウントマップライン.cs" />
-    <Compile Include="ステージ\演奏\コンボ.cs" />
-    <Compile Include="ステージ\演奏\スコア.cs" />
+    <Compile Include="ステージ\演奏\コンボ表示.cs" />
+    <Compile Include="ステージ\演奏\スコア表示.cs" />
     <Compile Include="ステージ\演奏\チップ光.cs" />
     <Compile Include="ステージ\演奏\ドラムパッド.cs" />
-    <Compile Include="ステージ\演奏\プレイヤー名.cs" />
+    <Compile Include="ステージ\演奏\プレイヤー名表示.cs" />
     <Compile Include="ステージ\演奏\レーンフラッシュ.cs" />
     <Compile Include="ステージ\演奏\レーンフレーム.cs" />
     <Compile Include="ステージ\演奏\判定文字列.cs" />
@@ -132,7 +132,7 @@
     <Compile Include="ステージ\演奏\演奏ステージ.cs" />
     <Compile Include="ステージ\演奏\フェーズパネル.cs" />
     <Compile Include="ステージ\演奏\成績.cs" />
-    <Compile Include="ステージ\演奏\判定パラメータ.cs" />
+    <Compile Include="ステージ\演奏\判定パラメータ表示.cs" />
     <Compile Include="ステージ\演奏\表示レーン種別.cs" />
     <Compile Include="ステージ\演奏\譜面スクロール速度表示.cs" />
     <Compile Include="ステージ\結果\演奏パラメータ結果.cs" />
