SSTFormat.v3.DTXReader で生成したスコアの演奏に対応。
ただし音はならない。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -156,6 +156,7 @@
     <Compile Include="曲\MusicNode.cs" />
     <Compile Include="曲\Node.cs" />
     <Compile Include="曲\RootNode.cs" />
+    <Compile Include="曲\WAV管理.cs" />
     <Compile Include="曲\曲名.cs" />
     <Compile Include="曲\曲ツリー.cs" />
     <Compile Include="曲\難易度種別.cs" />
