FDK.メディア.サウンド.WASAPI 名前空間を再構築。
同じデータで複数のSoundインスタンスを生成できるようにした。
SampleSourceFactory クラスを実装。今はまだMediaFoundationのみ対応。

--- a/DTXmatixx/DTXmatixx.csproj
+++ b/DTXmatixx/DTXmatixx.csproj
@@ -323,6 +323,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="System\sounds\drums\Bass.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="System\sounds\drums\Bass.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
